--- a/roles/basic/handlers/main.yml
+++ b/roles/basic/handlers/main.yml
@@ -1,10 +1,4 @@
-- name: locale-gen
-  listen: rebuild locales database
-  locale_gen:
-    name: en_US.UTF-8
-    state: present
-  become: yes
 - name: dpkg-reconfigure
-  listen: rebuild locales database
+  listen: reconfigure locales
   command: dpkg-reconfigure locales -f noninteractive
   become: yes
