--- a/setup.yml
+++ b/setup.yml
@@ -1,67 +1,17 @@
 ---
-- hosts: nuc
-  vars:
-    pip_package: python3-pip
-    pip_install_packages:
-      - name: docker
-      - name: docker-compose
-    router_ip: "192.168.50.1"
-    cidr: "192.168.50.0/24"
-    pihole_http_port: 81
-    portainer_http_port: 9000
-    homeassistant_http_port: 8123
-    uptime_kuma_http_port: 3001
-    wud_http_port: 3000
-    vscode_http_port: 8443
-    nodered_http_port: 1880
-    mosquitto_address: "{{ ansible_default_ipv4.address }}"
-    mosquitto_port: 1883
-    mosquitto_websockets_port: 9001
-    z2m_http_port: 8080
-    frigate_http_port: 5000
-    jellyfin_http_port: 8096
-    navidrome_http_port: 4533
-    syncthing_http_port: 8384
-    ring_mqtt_rtsp_port: 8556
-    octopi_address: 192.168.50.55
-    octopi_http_port: 80
-    sunshine_address: 192.168.50.33
-    sunshine_http_port: 47990
-    username: "nuc"
-    uid: 1000
-    username_personal: "daniel"
-    uid_personal: 1001
-    mount_root: "mnt"
-    shares:
-      - "Medien"
-      - "dreifuenf"
-    config_root: "/home/{{username}}/config"
-    homeassistant_config_folder: "{{config_root}}/home-assistant"
-    homeassistant_media_folder: "/{{mount_root}}/Medien/Musik"
-    frigate_config_folder: "{{config_root}}/frigate"
-    frigate_media_folder: "/{{mount_root}}/Medien/Frigate"
-    vscode_config_folder: "{{config_root}}/vscode"
-    nodered_config_folder: "{{config_root}}/node-red"
-    mosquitto_config_folder: "{{config_root}}/mosquitto/config"
-    mosquitto_data_folder: "{{config_root}}/mosquitto/data"
-    mosquitto_log_folder: "{{config_root}}/mosquitto/log"
-    zigbee2mqtt_data_folder: "{{config_root}}/z2m"
-    pihole_config_folder: "{{config_root}}/pihole"
-    caddy_folder: "{{config_root}}/caddy"
-    caddy_data_folder: "{{config_root}}/caddy/data"
-    caddy_config_folder: "{{config_root}}/caddy/config"
-    uptime_kuma_data_folder: "{{config_root}}/uptime-kuma/data"
-    jellyfin_config_folder: "{{config_root}}/jellyfin"
-    jellyfin_movie_folder: "/{{mount_root}}/Medien/Filme"
-    jellyfin_shows_folder: "/{{mount_root}}/Medien/Shows"
-    jellyfin_music_folder: "/{{mount_root}}/Medien/Musik"
-    navidrome_data_folder: "{{config_root}}/navidrome"
-    syncthing_config_folder: "{{config_root}}/syncthing/config"
-    syncthing_data_folder: "{{config_root}}/syncthing/data"
-    ring_mqtt_config_folder: "{{config_root}}/ring-mqtt"
+- hosts: pihole
+  roles:
+    - { role: pi, become: yes, tags: ["pi"] }
+    - { role: basic, become: yes, tags: ["basic"] }
+    - { role: geerlingguy.pip, become: yes, tags: ["docker"] }
+    - { role: geerlingguy.docker, become: yes, tags: ["docker"], vars: { docker_install_compose: true } }
+    - { role: portainer, become: yes, tags: ["docker", "portainer"] }
+    - { role: pihole, become: yes, tags: ["pihole"] }
 
+- hosts: homelab
   #remote_user: root
   roles:
+    - { role: nuc, become: yes, tags: ["nuc"] }
     - { role: basic, become: yes, tags: ["basic"] }
     - { role: geerlingguy.pip, become: yes, tags: ["docker"] }
     - { role: geerlingguy.docker, become: yes, tags: ["docker"], vars: { docker_install_compose: true } }
@@ -72,6 +22,7 @@
     - { role: fix_hass_bluetooth, become: yes, tags: ["ha"]}
     - { role: media, become: yes, tags: ["media"] }
     - { role: caddy, become: yes, tags: ["caddy"] }
+    - { role: resolved, become: yes, tags: ["pihole"] }
     - { role: pihole, become: yes, tags: ["pihole"] }
     - { role: monitoring, become: yes, tags: ["monitoring"] }
 
