--- a/group_vars/all/dhcp.yml
+++ b/group_vars/all/dhcp.yml
@@ -12,20 +12,49 @@ static_dhcp:
     ip: "{{ homelab_ip }}"
   virtualhere:
     mac: "B8:27:EB:C1:21:9D"
-    ip_suffix: "7"
+    ip_suffix: 7
   # Media .10-.19
   raw:
     mac: "2C:F0:5D:95:DD:14"
-    ip_suffix: "10"
+    ip_suffix: 10
   xbox:
     mac: "04:27:28:7D:C2:CD"
-    ip_suffix: "11"
+    ip_suffix: 11
+  beamer:
+    mac: "44:D2:44:E0:16:DF"
+    ip_suffix: 14
+  receiver:
+    mac: "00:09:B0:F2:F4:A4"
+    ip_suffix: 15
+  dashboard:
+    mac: "10:CE:02:F5:67:BC"
+    ip_suffix: 17
   ## Smart Home
   # Espresence .20-.29
   # BT proxy .30-.39
   # Shelly .40-.69
   # IP Cam .70-.79
   # Devices .80-.99
+  vacuum:
+    mac: "D4:D2:D6:F7:BF:60"
+    ip_suffix: 80
+  fan:
+    mac: "CC:B5:D1:6A:45:8F"
+    ip_suffix: 81
   p1s-1:
     mac: "C0:4E:30:06:C3:54"
-    ip_suffix: "91"
+    ip_suffix: 91
+  daniels-iphone:
+    mac: "78:64:C0:8B:41:AE"
+    ip_suffix: 95
+  daniels-mac:
+    mac: "BC:D0:74:33:3D:EC"
+    ip_suffix: 96
+  sabines-tablet:
+    mac: "B8:31:B5:77:91:EA"
+    ip_suffix: 98
+    nopihole: true
+  sabines-handy:
+    mac: "A8:34:6A:22:E7:7C"
+    ip_suffix: 99
+    nopihole: true
