--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -1,3 +1,6 @@
+- set_fact:
+    portainer_service: "{{ services['portainer-'~inventory_hostname] }}"
+
 - name: Create volume
   community.docker.docker_volume:
     name: portainer_data
@@ -15,3 +18,10 @@
       - "{{ portainer_http_port }}:9000"
     restart_policy: always
     pull: yes
+    labels:
+      homepage.group: "{{portainer_service.group}}"
+      homepage.name: "{{portainer_service.name}}"
+      homepage.href: "https://portainer-{{inventory_hostname}}.lan"
+      homepage.icon: "portainer.png"
+      homepage.server: "{{ inventory_hostname }}"
+      homepage.container: "dnsmasq_leases_ui"
