--- a/roles/monitoring/tasks/main.yml
+++ b/roles/monitoring/tasks/main.yml
@@ -20,11 +20,18 @@
             - "{{uptime_kuma_data_folder}}:/app/data"
             - /var/run/docker.sock:/var/run/docker.sock
           dns:
-            - "{{ ansible_default_ipv4.address }}"
+            - "{{ nameserver_pi_ip }}"
+            - "{{ homelab_nuc_ip }}"          
           network_mode: bridge
           labels:
             - 'wud.tag.include=^1$$'
             - 'wud.watch.digest=true'
+            - "homepage.group={{services.uptime.group}}"
+            - "homepage.name={{services.uptime.name}}"
+            - "homepage.href=https://uptime.lan"
+            - "homepage.icon=mdi-server"
+            - "homepage.server={{ inventory_hostname }}"
+            - "homepage.container=uptime_kuma"
         whatsupdocker:
           image: fmartinou/whats-up-docker:6.3.0
           container_name: wud
@@ -41,6 +48,12 @@
           labels:
             - 'wud.tag.include=^\d+\.\d+\.\d+$$'
             - 'wud.link.template=https://github.com/fmartinou/whats-up-docker/releases/tag/$${major}.$${minor}.$${patch}'
+            - "homepage.group={{services.wud.group}}"
+            - "homepage.name={{services.wud.name}}"
+            - "homepage.href=https://wud.lan"
+            - "homepage.icon=mdi-docker"
+            - "homepage.server={{ inventory_hostname }}"
+            - "homepage.container=wud"
   register: output
 
 - ansible.builtin.debug:
