Add ollama and wolf

--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -6,7 +6,7 @@ locale: en_US.UTF-8
 pip_package: python3-pip
 pip_install_packages:
   - name: "pyyaml==5.3.1"
-  - name: docker
+  - name: "docker==6.1.3"
   - name: docker-compose
 ip_prefix: "192.168.50."
 router_ip: "192.168.50.1"
@@ -14,6 +14,7 @@ router_ip: "192.168.50.1"
 #homelab_nuc_ip: "192.168.50.5"
 nameserver_pi_ip: "{{ hostvars['nameserver-pi'].ansible_host }}"
 homelab_nuc_ip: "{{ hostvars['homelab-nuc'].ansible_host }}"
+ailab_um_ip: "{{hostvars['ailab-um'].ansible_host }}"
 cidr: "192.168.50.0/24"
 pihole_http_port: 81
 portainer_http_port: 9000
@@ -31,6 +32,7 @@ jellyfin_http_port: 8096
 navidrome_http_port: 4533
 syncthing_http_port: 8384
 ring_mqtt_rtsp_port: 8556
+open_webui_http_port: 3002
 sunshine_address: 192.168.50.33
 sunshine_http_port: 47990
 uid: 1000
