--- a/setup.yml
+++ b/setup.yml
@@ -31,3 +31,14 @@
     - { role: dockerproxy, become: yes, tags: ["docker", "dockerproxy", "portainer"] }
     - { role: portainer, become: yes, tags: ["docker", "portainer"] }
     - { role: pihole, become: yes, tags: ["pihole"] }
+
+- hosts: ailab
+  roles:
+    - { role: geerlingguy.pip, become: yes, tags: ["docker"] }
+    - { role: geerlingguy.docker, become: yes, tags: ["docker"], vars: { docker_install_compose: true } }
+    - { role: dockerhub, become: yes, tags: ["docker", "dockerhub"] }
+    - { role: dockerproxy, become: yes, tags: ["docker", "dockerproxy", "portainer"] }
+    - { role: portainer, become: yes, tags: ["docker", "portainer"] }
+
+    - { role: ollama, become: yes, tags: ["ollama"]}
+    - { role: wolf, become: yes, tags: ["wolf"]}
