--- a/setup.yml
+++ b/setup.yml
@@ -40,5 +40,6 @@
     - { role: dockerproxy, become: yes, tags: ["docker", "dockerproxy", "portainer"] }
     - { role: portainer, become: yes, tags: ["docker", "portainer"] }
 
+    - { role: dmotte.disable_ipv6, become: yes, tags: ["ipv6"] }
     - { role: ollama, become: yes, tags: ["ollama"]}
     - { role: wolf, become: yes, tags: ["wolf"]}
