--- a/roles/wolf/tasks/main.yml
+++ b/roles/wolf/tasks/main.yml
@@ -1,3 +1,9 @@
+- name: Copy udev rules
+  ansible.builtin.template:
+    src: "85-wolf-virtual-inputs.rules"
+    dest: "/etc/udev/rules.d/85-wolf-virtual-inputs.rules"
+  notify: restart udev
+  
 - name: Start wolf
   community.docker.docker_compose:
     project_name: wolf
@@ -8,8 +14,7 @@
         wolf:
           image: ghcr.io/games-on-whales/wolf:stable
           environment:
-            - WOLF_LOG_LEVEL=info
-            - WOLF_STOP_CONTAINER_ON_EXIT=TRUE
+            - WOLF_LOG_LEVEL=debug
             - XDG_RUNTIME_DIR=/tmp/sockets
             - HOST_APPS_STATE_FOLDER=/etc/wolf
           volumes:
