--- a/roles/basic/tasks/main.yml
+++ b/roles/basic/tasks/main.yml
@@ -19,3 +19,8 @@
 - name: Set timezone to Europe/Berlin
   community.general.timezone:
     name: Europe/Berlin
+- name: Update journald config file to limit journal size
+  lineinfile:
+    path: /etc/systemd/journald.conf
+    regexp: '^SystemMaxUse='
+    line: SystemMaxUse=100M
