--- a/roles/basic/handlers/main.yml
+++ b/roles/basic/handlers/main.yml
@@ -2,3 +2,5 @@
   listen: reconfigure locales
   command: dpkg-reconfigure locales -f noninteractive
   become: yes
+- name: Restart systemd-journald
+  service: name=systemd-journald state=restarted
