--- a/setup.yml
+++ b/setup.yml
@@ -10,6 +10,7 @@
     - { role: dockerhub, become: yes, tags: ["docker", "dockerhub"] }
     - { role: dockerproxy, become: yes, tags: ["docker", "dockerproxy", "portainer"] }
     - { role: portainer, become: yes, tags: ["docker", "portainer"] }
+    - { role: glances, become: yes, tags: ["glances"] }
 
     - { role: storage, become: yes, tags: ["storage"] }
     - { role: homeassistant, become: yes, tags: ["ha"] }
@@ -32,6 +33,7 @@
     - { role: dockerhub, become: yes, tags: ["docker", "dockerhub"] }
     - { role: dockerproxy, become: yes, tags: ["docker", "dockerproxy", "portainer"] }
     - { role: portainer, become: yes, tags: ["docker", "portainer"] }
+    - { role: glances, become: yes, tags: ["glances"] }
     - { role: pihole, become: yes, tags: ["pihole"] }
 
 - hosts: ailab
@@ -44,6 +46,7 @@
     - { role: dockerhub, become: yes, tags: ["docker", "dockerhub"] }
     - { role: dockerproxy, become: yes, tags: ["docker", "dockerproxy", "portainer"] }
     - { role: portainer, become: yes, tags: ["docker", "portainer"] }
+    - { role: glances, become: yes, tags: ["glances"] }
 
     - { role: dmotte.disable_ipv6, become: yes, tags: ["ipv6"] }
     - { role: ollama, become: yes, tags: ["ollama"]}
