Add the vr router

--- a/group_vars/all/dhcp.yml
+++ b/group_vars/all/dhcp.yml
@@ -16,6 +16,9 @@ static_dhcp:
   virtualhere:
     mac: "B8:27:EB:C1:21:9D"
     ip_suffix: 7
+  gl-mt3000:
+    mac: "94:83:C4:3A:71:DE"
+    ip_suffix: 8
   # Media .10-.19
   raw:
     mac: "2C:F0:5D:95:DD:14"
