--- a/roles/dockerproxy/tasks/main.yml
+++ b/roles/dockerproxy/tasks/main.yml
@@ -22,6 +22,7 @@
             - SERVICES=1 # Allow access to viewing services (necessary when using Docker Swarm)
             - TASKS=1 # Allow access to viewing tasks (necessary when using Docker Swarm)
             - POST=0 # Disallow any POST operations (effectively read-only)
+            - DISABLE_IPV6=1
           ports:
             - 2375:2375
           networks:
